# futures_langchain

./: .env  .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  demo.py  main.py  pyproject.toml  workflow.py
agents/: __init__.py  bearish_agent.py  bullish_agent.py  fundamental_agent.py  news_agent.py  sentiment_agent.py  summary_agent.py
reports/: bearish_SN_20260205_095358.md  bullish_SN_20260205_095309.md  fundamental_sn_20260205_094931.md  news_锡期货市场分析_20260205_095121.md  sentiment_锡期货_20260205_095057.md  summary_SN_20260205_095506.md
tests/: test_agents.py  test_futures_analyzer.py  test_workflow.py
tools/: __init__.py  file_saver.py  futures_analyzer.py  pdf_generator.py  web_search.py
